--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,69 @@
-#id {}
+* {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+}
 
-.nav {}
+h1 {
+    color: #4aaaa5;
+    text-align: left;
+    width: 100%;
+    border-bottom: solid 1px #cccccc;
+    padding-bottom: 20px;
+    font-size: 1.8em;
+}
 
+p {
+    line-height: 2;
+}
+
+.heading {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+#logo {
+    background-color: #4aaaa5;
+    color: white;
+    text-decoration: none;
+}
+
+body {
+    background-image: url("../images/concrete_seamless.png");
+    background-color: grey;
+}
+
+.content {
+    background-color: white;
+    width: 960px;
+    margin: auto;
+    padding: 30px;
+}
+
+#cat {
+    width: 25%;
+    height: 25%;
+    float: left;
+    margin-right: 15px;
+}
+
+nav {
+    margin: auto;
+    margin-bottom: 30px;
+    background-color: white;
+    width: 960px;
+    height: 50px;
+}
+
+.nav {
+    text-align: right;
+}
+
+.footer {
+    background-color: #666666;
+    border-top: solid 5px #4aaaa5;
+    text-align: center;
+    padding: 20px 0px 5px 0px;
+    color: #cccccc;
+    font-size: 0.5em;
+    margin-top: 30px;
+}
+
+.image-text {}
