--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,25 @@ h1 {
     color: #4aaaa5;
     text-align: left;
     width: 100%;
-    border-bottom: solid 1px #cccccc;
+    border-bottom: solid 1px #dddddd;
     padding-bottom: 20px;
     font-size: 1.8em;
 }
 
 p {
     line-height: 2;
+}
+
+.input {
+    width: 100%;
+}
+
+.button {
+    background-color: #4aaaa5;
+    padding: 5px 15px;
+    margin-top: 10px;
+    color: white;
+    border: none;
 }
 
 .heading {
@@ -23,11 +35,22 @@ p {
     background-color: #4aaaa5;
     color: white;
     text-decoration: none;
+    padding: 50px 30px 0px 30px;
+    font-size: 1.3em;
 }
 
 body {
     background-image: url("../images/concrete_seamless.png");
     background-color: grey;
+    margin: 0px;
+}
+
+header {
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    border-bottom: 1px solid #dddddd;
+    margin-bottom: 30px;
 }
 
 .content {
@@ -35,6 +58,7 @@ body {
     width: 960px;
     margin: auto;
     padding: 30px;
+    border: 1px solid #dddddd;
 }
 
 #cat {
@@ -45,20 +69,34 @@ body {
 }
 
 nav {
+    position: relative;
     margin: auto;
-    margin-bottom: 30px;
-    background-color: white;
     width: 960px;
     height: 50px;
+    padding: 0px 30px 20px 30px;
 }
 
 .nav {
     text-align: right;
 }
 
+.right-nav {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    text-decoration: none;
+}
+
+.left-nav {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    text-decoration: none;
+}
+
 .footer {
     background-color: #666666;
-    border-top: solid 5px #4aaaa5;
+    border-top: solid 6px #4aaaa5;
     text-align: center;
     padding: 20px 0px 5px 0px;
     color: #cccccc;
@@ -66,4 +104,16 @@ nav {
     margin-top: 30px;
 }
 
-.image-text {}
+.image-text {
+    position: absolute;
+    bottom: 30px;
+    width: 100%;
+    color: #ffffff;
+    background-color: #4aaaa5;
+}
+
+.content img {
+    height: 200px;
+    width: 200px;
+    float: left;
+}
